// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Editor renders a static view when not editable 1`] = `
<header
  className="jsx-2279537447"
>
  <div
    className="jsx-2279537447"
    style={
      Object {
        "background": "#EEE",
        "padding": "10px",
      }
    }
  >
    <h1
      className="bp3-heading"
    >
      <div
        className="bp3-editable-text bp3-disabled bp3-editable-text-placeholder"
        onFocus={[Function]}
        tabIndex={null}
      >
        <span
          className="bp3-editable-text-content"
          style={
            Object {
              "height": 0,
              "lineHeight": "0px",
              "minWidth": 80,
            }
          }
        >
          Edit title...
        </span>
      </div>
    </h1>
    <div
      className="jsx-2279537447"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            className="bp3-button bp3-disabled bp3-minimal author-button"
            disabled={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-add"
              icon="add"
            >
              <svg
                data-icon="add"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  add
                </desc>
                <path
                  d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="jsx-2279537447"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            className="bp3-button bp3-disabled bp3-minimal"
            disabled={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-add"
              icon="add"
            >
              <svg
                data-icon="add"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  add
                </desc>
                <path
                  d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="jsx-2279537447"
      style={
        Object {
          "marginTop": "10px",
        }
      }
    >
      <div
        className="bp3-editable-text bp3-disabled bp3-editable-text-placeholder bp3-multiline"
        onFocus={[Function]}
        tabIndex={null}
      >
        <span
          className="bp3-editable-text-content"
          style={
            Object {
              "height": 0,
            }
          }
        >
          Edit description...
        </span>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header Editor renders correctly with no props 1`] = `
<header
  className="jsx-2279537447"
>
  <div
    className="jsx-2279537447"
    style={
      Object {
        "background": "#EEE",
        "padding": "10px",
      }
    }
  >
    <h1
      className="bp3-heading"
    >
      <div
        className="bp3-editable-text bp3-editable-text-placeholder"
        onFocus={[Function]}
        tabIndex={0}
      >
        <span
          className="bp3-editable-text-content"
          style={
            Object {
              "height": 0,
              "lineHeight": "0px",
              "minWidth": 80,
            }
          }
        >
          Edit title...
        </span>
      </div>
    </h1>
    <div
      className="jsx-2279537447"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            className="bp3-button bp3-minimal author-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-add"
              icon="add"
            >
              <svg
                data-icon="add"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  add
                </desc>
                <path
                  d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="jsx-2279537447"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-add"
              icon="add"
            >
              <svg
                data-icon="add"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  add
                </desc>
                <path
                  d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="jsx-2279537447"
      style={
        Object {
          "marginTop": "10px",
        }
      }
    >
      <div
        className="bp3-editable-text bp3-editable-text-placeholder bp3-multiline"
        onFocus={[Function]}
        tabIndex={0}
      >
        <span
          className="bp3-editable-text-content"
          style={
            Object {
              "height": 0,
            }
          }
        >
          Edit description...
        </span>
      </div>
    </div>
  </div>
</header>
`;
